style: modify text styles

--- a/templates/base/about.html
+++ b/templates/base/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <div class="container px-5 mx-auto">
-        <div class="w-1/3 mt-20">
+        <div class="mt-20 md:w-1/2">
             <h1 class="text-3xl font-bold text-primary">About this Project</h1>
             <hr class="my-4">
             <p class="mb-4">
@@ -15,6 +15,5 @@
             <p>
                 Revisiting the project a year later, I am now using it as a foundation to build upon and bring it from Figma prototype, to a fully functioning Django-based web application, combining my passions for user-centric design and web development to build a holistic solution.
             </p>
-        </div>
-    </div>
+        </div>    </div>
 {% endblock content %}
