style: fix hamburger styles

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -78,7 +78,7 @@
                             <a href="#" class="text-white px-4 border-x-[1px]">Blog</a>
                         </li>
                         <li>
-                            <a href="#" class="px-4 text-white">About</a>
+                            <a href="{% url 'about' %}" class="px-4 text-white">About</a>
                         </li>
                     </ul>
                 </div>
@@ -110,7 +110,7 @@
                 </div>
             </nav>
             <!-- EXPANDED MENU ON CLICK -->
-            <div class="absolute z-20 flex items-center justify-center hidden w-screen p-12 bg-primary top-full"
+            <div class="absolute z-50 flex items-center justify-center hidden w-screen p-12 bg-primary top-full"
                  id="hamburger-menu-expanded">
                 <ul class="flex flex-col items-center gap-10 text-2xl">
                     <li>
@@ -125,11 +125,11 @@
                     {% else %}
                         <li>
                             <a href="{% url 'register' %}?next={{ request.get_full_path }}"
-                               class="flex items-center h-10 px-6 text-white rounded-full py-auto">Signup</a>
+                               class="px-4 text-white">Signup</a>
                         </li>
                         <li>
                             <a href="{% url 'login' %}?next={{ request.get_full_path }}"
-                               class="bg-primary py-auto px-6 border-[1px] border-white rounded-2xl h-10 flex items-center font-bold text-white">Login</a>
+                               class="px-4 text-white">Login</a>
                         </li>
                     {% endif %}
                     <li>
