feat: add favicon + titles

--- a/templates/base/403.html
+++ b/templates/base/403.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}
+    403 Error
+{% endblock title %}
 {% block content %}
     <div class="flex flex-col items-center justify-center my-auto">
         <p class="text-3xl font-bold text-center text-primary">403 Error</p>
