--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}
+    Checkout
+{% endblock title %}
 {% block content %}
     <div class="container h-full px-5 mx-auto mt-12">
         <div class="grid grid-cols-1 gap-10 lg:grid-cols-2">
