--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}
+    Book a flight
+{% endblock title %}
 {% block content %}
     <!-- BODY BACKGROUND -->
     <div class="w-screen h-full bg-gray-100">
@@ -10,7 +13,9 @@
                 <p class="text-lg text-center text-text">We can bring you anywhere!*</p>
                 <p class="mt-6 text-xs text-center text-text">*almost</p>
             </div>
-            <div class="relative"><img class="absolute bottom-0" src="/static/img/planes-home.svg" alt=""></div>            
+            <div class="relative">
+                <img class="absolute bottom-0" src="/static/img/planes-home.svg" alt="">
+            </div>
             <!-- OUTER CONTAINER FOR FORM -->
             <div class="container relative flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg">
                 <!-- FORM CONTRAINER -->
@@ -48,7 +53,6 @@
                                            id="origin"
                                            placeholder="Origin"
                                            class="z-40 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
-                                        
                                            required>
                                     <div id="airports-list-origin"
                                          class="absolute z-30 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
@@ -66,7 +70,6 @@
                                            id="destination"
                                            placeholder="Destination"
                                            class="caret-transparent z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
-                                        
                                            required>
                                     <div id="airports-list-destination"
                                          class="absolute z-10 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
@@ -85,7 +88,6 @@
                                        class="caret-transparent flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                        placeholder="Outbound Date"
                                        data-id="datetime"
-                                    
                                        required>
                                 <!-- RETURN DATE -->
                                 <input type="text"
@@ -94,7 +96,6 @@
                                        class="caret-transparent flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                        placeholder="Return Date"
                                        data-id="datetime"
-                                    
                                        required>
                                 {% comment %} <input type="text"
         name="passengers"
