--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,4 +1,7 @@
 {% extends 'base/base.html' %}
+{% block title %}
+    Login
+{% endblock title %}
 {% block content %}
     <div class="flex items-center w-screen m-auto mx-auto bg-gray-100">
         <div class="container flex justify-center px-5 mx-auto">
@@ -33,8 +36,8 @@
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         {% if request.GET.next %}
-                        <!-- FOR REDIRECT AFTER LOGIN -->
-                        <input type="hidden" name="next" value="{{request.GET.urlencode}}">
+                            <!-- FOR REDIRECT AFTER LOGIN -->
+                            <input type="hidden" name="next" value="{{ request.GET.urlencode }}">
                         {% endif %}
                         <button type="submit"
                                 class="flex items-center justify-center h-12 px-6 font-bold text-center text-white rounded-full bg-primary py-auto">
