--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,4 +1,7 @@
 {% extends 'base/base.html' %}
+{% block title %}
+    Register
+{% endblock title %}
 {% block content %}
     <div class="flex items-center w-screen m-auto mx-auto bg-gray-100">
         <div class="container flex justify-center px-5 mx-auto">
