--- a/templates/core/order-confirmation.html
+++ b/templates/core/order-confirmation.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}
+    Order Confirmation
+{% endblock title %}
 {% block content %}
     <div class="container flex flex-col items-center self-stretch justify-center flex-grow h-full px-5 mx-auto ">
         <p class="text-3xl font-bold text-center text-primary">Cleared for takeoff!</p>
